--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@ th {
     padding: 50px;
 }
 
-td[class="1"] {
+ {
     text-align: center;
-    background-color: rgb(250,0,0);
 }
 
 tr:nth-child(even) {
@@ -33,4 +32,17 @@ table {
     letter-spacing: 1px;
     font-family: sans-serif;
     font-size: .8rem;
+}
+.h1 {
+    background: rgb(255,0,0,.25);
+}
+.h2 {
+    background: rgb(153,102,153);
+}
+
+.h3 {
+    background: rgb(100,180,200);
+}
+.h4 {
+    background: rgb(230,255,00);
 }
